# masonai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.agents/: config.toml
backend/masonai/: Dockerfile  pyproject.toml
backend/masonai/src/: fetch.py  fetch_academics.py  fetch_sections.py  fetch_social.py  filter.py  ical_gmu.ics  llm.py  main.py  prompt.md
backend/masonai/tests/: test_llm.py
frontend/masonai/: package-lock.json  package.json
frontend/masonai/src/app/: layout.tsx  page.tsx  theme.ts
frontend/masonai/src/app/schedules/: page.tsx
frontend/masonai/src/components/: Schedule.tsx  SectionList.tsx  SectionSearch.tsx
frontend/masonai/src/lib/: api.ts  chats.ts  mockSchedules.ts  schedules.ts
supabase/: config.toml
